--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Instant Weather</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home_dashboard">Home</string>
+    <string name="detail">Detail</string>
+    <string name="chart">Chart</string>
+    <string name="settings">Settings</string>
+    <string name="error_occurred">An error occurred. Please check your internet connection.
+        \n\n Swipe down to retry</string>
+    <string name="pressure">Pressure</string>
+    <string name="humidity">Humidity</string>
 </resources>
