--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="detail">Detail</string>
     <string name="chart">Chart</string>
     <string name="settings">Settings</string>
-    <string name="error_occurred">An error occurred. Please check your internet connection.
-        \n\n Swipe down to retry</string>
+    <string name="error_occurred">Oops! An error occurred. \n\n Please check your internet connection.
+        \n\n Swipe down to retry.</string>
     <string name="pressure">Pressure</string>
     <string name="humidity">Humidity</string>
     <string name="weather_history">Weather History</string>
@@ -18,4 +18,5 @@
     <string name="coming_soon">Weather chart coming soon!</string>
     <string name="loading_text">Fetching weather</string>
     <string name="weather_in">Weather in</string>
+    <string name="temp_unit">\u2103</string>
 </resources>
