--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,9 @@
     <string name="dark_theme_value" translatable="false">Dark</string>
     <string name="auto_battery_value" translatable="false">Auto-battery</string>
     <string name="follow_system_value" translatable="false">System</string>
+    <string name="flight_mode_error">Your device is in Flight Mode, disable and restart the application.</string>
+    <string name="location_permission_error">Permission was not granted! \n\n Enable permission manually in this application\'s settings and restart the application.</string>
+    <string name="highprecision_internet_error">An error occurred when getting your location! \n\n Ensure your device is connected to the internet. \n\n Swipe down to refresh.</string>
+    <string name="location_optimization_error">Location Optimization Permission was not granted! \n\n Enable permission manually in application settings \n and restart the application.</string>
+    <string name="general_main_error">An error occurred in getting your location! \n\n Ensure your device is connected to the internet \n\n Swipe down to refresh.</string>
 </resources>
