--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="highprecision_internet_error">An error occurred when getting your location! \n\n Ensure your device is connected to the internet. \n\n Swipe down to refresh.</string>
     <string name="location_optimization_error">Location Optimization Permission was not granted! \n\n Enable permission manually in application settings \n and restart the application.</string>
     <string name="general_main_error">An error occurred in getting your location! \n\n Ensure your device is connected to the internet \n\n Swipe down to refresh.</string>
+    <string name="enable_gps">Enable your GPS and restart!</string>
 </resources>
