--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,7 @@
     <string name="humidity">Humidity</string>
     <string name="weather_history">Weather History</string>
     <string name="sort_by">Sort by:</string>
-    <string name="cache_string">Cache duration in seconds</string>
-    <string name="coming_soon">Weather chart coming soon!</string>
+    <string name="cache_string">Cache duration (seconds)</string>
     <string name="loading_text">Fetching weather</string>
     <string name="weather_in">Weather in </string>
     <string name="comma">, </string>
